# NYCU-Data-Science-2024-Makeup-Transfer

./: .gitignore  README.md  config.py  dataloder.py  process_data.py  pyproject.toml  run_score.py  solver_makeup.py  train.py
ai/: MakeupTransfer.py  __init__.py  compute_metrics.py  config_class.py  math_tools.py
data_loaders/: MakeupMaskLabel.py  __init__.py  makeup.py
module/: __init__.py
ops/: loss_added.py
